# deepstream_demo

./: CMakeLists.txt  README.md  config_nvdsanalytics.txt  dstest_pgie_config.txt  dstest_sgie1_config.txt  dstest_tracker_config.txt  nvdsanalytics_pgie_config.txt  sources.txt
config/ds_test/: dstest_sgie2_config.txt  dstest_sgie3_config.txt  nvdsanalytics_pgie_config.txt
config/ds_test/models/Primary_Detector/: resnet10.caffemodel_b30_gpu0_int8.engine
config/ds_test/models/Secondary_CarColor/: resnet18.caffemodel_b16_gpu0_int8.engine
config/ds_test/models/Secondary_CarMake/: resnet18.caffemodel_b16_gpu0_int8.engine
config/ds_test/models/Secondary_VehicleTypes/: resnet18.caffemodel_b16_gpu0_int8.engine
config/line_crossing/: config_infer_primary_yoloV4.txt  config_nvdsanalytics.txt
include/: myheader.h
models/Primary_Detector/: labels.txt  resnet10.caffemodel_b30_gpu0_int8.engine  resnet10.caffemodel_b4_gpu0_int8.engine
models/Secondary_CarColor/: resnet18.caffemodel_b16_gpu0_int8.engine
models/Secondary_CarMake/: resnet18.caffemodel_b16_gpu0_int8.engine
models/Secondary_VehicleTypes/: resnet18.caffemodel_b16_gpu0_int8.engine
src/: deepstream_app_main.c  deepstream_nvdsanalytics_meta.cpp  deepstream_nvdsanalytics_test.cpp  line_crossing_worker.cpp  modify_source.py  video_analytics_worker.cpp
